docs: Updated documentation

--- a/ENADE 2014.ipynb
+++ b/ENADE 2014.ipynb
@@ -4,84 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<table style=\"width: 100%; margin-left: auto; margin-right: auto; background-color: white;\">\n",
-    "<tbody>\n",
-    "<tr>\n",
-    "\n",
-    "<td style=\"text-align: center; width: 12%;\"><img src=\"imagens/brasil-brasao.png\" alt=\"\" /></td>\n",
-    "\n",
-    "<td style=\"width: 68%;\">\n",
-    "<h2 style=\"text-align: center; margin-top: 1%;\">Governo do Brasil</h2>\n",
-    "<h2 style=\"text-align: center; margin-top: 1%;\">Minist&eacute;rio da Educa&ccedil;&atilde;o</h2>\n",
-    "<h2 style=\"text-align: center; margin-top: 1%;\">Universidade Federal do Amazonas</h2>\n",
-    "<h2 style=\"text-align: center; margin-top: 1%;\">Instituto de Computa&ccedil;&atilde;o</h2>\n",
-    "</td>\n",
-    "\n",
-    "<td style=\"width: 12%;\"><img src=\"imagens/UFAM-logo.png\" alt=\"\" /></td>\n",
-    "\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>"
+    "# ENADE 2014"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aprendizado de Máquina e Mineração de Dados\n",
-    "## Projeto Final de Disciplina, v. 1.0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Professores _Marco Cristo_ e _Eulanda Santos_\n",
-    "\n",
-    "**Alunos**:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Carlos Vicente Soares Araujo\n",
-    "- Thiago Marques Rocha"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Neste trabalho, você vai usar dados do INEP sobre o ENADE 2014 realizado por alunos de Pedagogia da região Sudeste do Brasil. Os dados a serem usados estão descritos em anexo a este documento e serão disponibilizados com o trabalho. Seu objetivo é prever se um aluno vai ou não passar no ENADE, ou seja, se sua nota média geral (NT_GER) será maior que 50. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Requisitos__:\n",
-    "\n",
-    "* A solução deve ser feita usando as biliotecas sklearn, tensorflow e keras;\n",
-    "* O relatório deve ser entregue como um notebook Jupyter;\n",
-    "* O relatório deve incluir todos os passos de transformação de dados executados;\n",
-    "* Devem ser apresentados os seguintes modelos:\n",
-    "    * RandomForest;\n",
-    "    * Rede Neural com pelo menos duas camadas ocultas;\n",
-    "        * Modelo simples;\n",
-    "        * Modelo com normalização em batch;\n",
-    "        * Modelo com Dropout;\n",
-    "* Todos os modelos acima devem ser avaliados sob as mesmas condições;\n",
-    "    \n",
-    "__Avaliação__:\n",
-    "\n",
-    "* 80% da nota associado ao trabalho entregue;\n",
-    "* 20% da nota associado ao resultado obtido pelos modelos;\n",
-    "    \n",
-    "__Observações__:\n",
-    "\n",
-    "* Trabalho para equipes de até duas pessoas;\n",
-    "* Códigos-base em Keras para a FNN são fornecidos abaixo;"
+    "Usaremos dados do INEP sobre o ENADE 2014 realizado por alunos de Pedagogia da região Sudeste do Brasil. Os dados a serem usados estão descritos em anexo a este documento. O objetivo é prever se um aluno vai ou não passar no ENADE, ou seja, se sua nota média geral (NT_GER) será maior que 50. "
    ]
   },
   {
